# rose_config

./: default_rosinstall  manifest.xml  package.xml
developers/: developer_loy_config.sh  developer_mathijs_config.sh  developer_michiel_config.sh  developer_okke_config.sh
kinect/: rgb_A00363A21169047A.yaml  rgb_A00364A12806119A.yaml
locations/: location_rose.config  location_siza.config  location_thebe.config
maps/flex/: flex11.yaml  flex13.yaml  flex3.yaml  flex4.yaml  flex5.yaml  flex8.yaml  flex9.yaml
maps/rosebv/: rosebv9_planner.pgm
maps/siza/: siza_localization.pgm  siza_navigation.yaml
maps/thebe/: thebe_localization.yaml  thebe_navigation.yaml
operators/: operator_default_config.sh
robai/: cytonConfig.xml
robots/: robot_akia_config.sh  robot_bibi_config.sh  robot_rose_config.sh
rose21_platform/: CMakeLists.txt  package.xml  rosconsole.conf
rose21_platform/config/: bumpers_params.yaml  costmap_common_params.yaml  footprint_params.yaml  global_costmap_params.yaml  global_costmap_simulation_params.yaml  local_costmap_params.yaml  local_costmap_simulation_params.yaml  move_base_params.yaml
rose21_platform/launch/: body.launch  kinect.launch  laser_scanner.launch  mapping.launch  navigation.launch  neck.launch  neck_controller.launch  neck_controller.yaml  platform.launch  platform_controllers.launch
rose21_platform/launch/arm_controllers/: dynamixel_joint_state_publisher.py  relax_all_servos.py  right_arm_controller.launch
rose21_platform/test/: Kinect trajectory.ipynb  Kinect.ipynb  Odometry.ipynb  kinect_test.launch  kinect_test.py  odometry_requirements.md  odometry_setup.tga  odometry_test.launch  odometry_test.py  wheelunits_test.py
rose_config/: CMakeLists.txt
rose_config/configurations/akia/: configuration.sh
rose_config/deployment/akia/: deployment.sh
rose_config/deployment/bibi/: deployment.sh
rose_config/deployment/loy/: deployment.sh
rose_config/deployment/maarten/: deployment.sh
rose_config/deployment/mathijs/: deployment.sh
rose_config/deployment/michiel/: deployment.sh
rose_config/deployment/okke/: deployment.sh
rose_config/deployment/operator/: deployment.sh
rose_config/deployment/rose/: deployment.sh
rose_config/developers/: developer_loy_config.sh  developer_mathijs_config.sh  developer_michiel_config.sh  developer_okke_config.sh  developer_testing_config.sh
rose_config/installations/bibi/: pc1.sh  pc2.sh
rose_config/installations/loy/: pc1.sh
rose_config/installations/maarten/: pc1.sh
rose_config/installations/mathijs/: pc1.sh
rose_config/installations/michiel/: pc1.sh
rose_config/installations/okke/: pc1.sh
rose_config/installations/operator/: pc1.sh
rose_config/installations/rose/: pc1.sh  pc2.sh
rose_config/installations/rose22/: pc2.sh
rose_config/installations/rose30/: pc1.sh
rose_config/kinect/A00363A21169047A/: depth.yaml
rose_config/kinect/A00365801083046A/: depth.yaml  rgb.yaml
rose_config/kinect/akia/: depth.yaml  rgb.yaml
rose_config/launch_files/rose21/: ar_track_alvar.launch  body.launch  dynamixel_joint_states.launch  kinect.launch  laser_scanner.launch  mapping.launch  navigation.launch  neck.launch  neck_controller.launch  (+4 more)
rose_config/locations/: location_engelen.config  location_klap.config  location_rose.config  location_siza.config
rose_config/operators/: operator_default_config.sh
rose_config/robots/: robot_akia_config.sh  robot_bibi_config.sh  robot_rose_config.sh
rose_config/rosinstall/: default_rosinstall  rosinstall_akia  rosinstall_all_develop  rosinstall_loy  rosinstall_mathijs  rosinstall_okke  rosinstall_rose
rose_config/workspaces/: loy.ws  mathijs.ws  michiel.ws  rose_with_tue.ws  rosetest.ws
rose_machine_files/: CMakeLists.txt  package.xml
rose_machine_files/machines/: rose20.machine  rose21.machine  simulation.machine
rosinstall/: default_rosinstall
workspaces/: okke.ws  rose.ws
(+91 files in other folders)
