<?xml version="1.0"?>
<package>
  <name>rose21_platform</name>
  <version>0.0.0</version>
  <description>The rose21_platform package</description>

  <maintainer email="hendriks@robot-rose.nl">okke</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
